switched to Scala 3.7.1 and sbt 1.11 and added a few parallel examples and examples from the scala user group